--- a/public/503.html
+++ b/public/503.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>We're offline for a brief upgrade! (503)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -18,7 +18,7 @@
 
 <body>
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>We're offline for a brief upgrade!</h1>
   </div>
 </body>
 </html>
